# server/common/swagger/Api.yaml
@@ -2,20 +2,21 @@ swagger: "2.0"
 info:
   version: 1.0.0
   title: musicApp
-  description: Basic music app and apis
+  description: This is Music app for api
 basePath: /api/v1
 tags:
   - name: Examples
     description: Simple example endpoints
-  - name: Specification
-    description: The swagger API specification
+  # - name: Specification
+  #   description: The swagger API specification
   - name: Users
-    description: The swagger API Users  
+    description: Users CRUD operations
 
 consumes:
   - application/json
 produces:
   - application/json
+
 
 definitions:
   ExampleBody:
@@ -27,15 +28,15 @@ definitions:
       name:
         type: string
         example: no_stress
-    # UsersBody:
-    # type: object
-    # title: user
-    # required:
-    #   - name
-    # properties:
-    #   name:
-    #     type: string
-    #     example: hi    
+  UsersBody:
+    type: object
+    title: users
+    required:
+      - name
+    properties:
+      name:
+        type: string
+        example: Pooja
 
 paths:
   /examples:
@@ -55,7 +56,7 @@ paths:
           in: body
           description: an example
           required: true
-          schema: 
+          schema:
             $ref: "#/definitions/ExampleBody"
       responses:
         200:
@@ -77,14 +78,6 @@ paths:
         404:
           description: Example not found
 
-  /spec:
-    get:
-      tags:
-        - Specification
-      responses:
-        200:
-          description: Return the API specification
-
   /users:
     get:
       tags:
@@ -92,18 +85,56 @@ paths:
       description: Fetch all users
       responses:
         200:
-          description: Returns all users      
+          description: Returns all users
     post:
       tags:
-        - addUser
-      description: Create a new user
+        - Users
+      description: Create a new example
       parameters:
         - name: user
           in: body
-          description: an user
+          description: an users
           required: true
-          schema: 
-            # $ref: "#/definitions/UsersBody"
+          schema:
+            $ref: "#/definitions/ExampleBody"
       responses:
         200:
-          description: Returns all users 
+          description: Returns all users
+
+  /users/{id}:
+    get:
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the user to retrieve
+          type: integer
+      responses:
+        200:
+          description: Return the user with the specified id
+        404:
+          description: User not found
+    delete:
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the user to delete
+          type: integer
+      responses:
+        200:
+          description: Return the user with the specified id
+        404:
+          description: User not found
+
+  # /spec:
+  #   get:
+  #     tags:
+  #       - Specification
+  #     responses:
+  #       200:
+  #         description: Return the API specification
